# vibemusic

./: .gitattributes  .gitignore  README.md  cliff.toml  commitlint.config.js  eslint.config.js  package-lock.json  package.json  stylelint.config.js  tsconfig.json  vite.config.ts
.github/workflows/: nightly.yml  release.yml
scripts/: cleanup.ps1  download-ffmpeg.mjs
src/: App.tsx  main.tsx
src-tauri/: .gitignore  2  Cargo.toml  LICENSE.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial_schema.sql  002_add_playlist_artwork.sql
src-tauri/src/: artwork.rs  audio.rs  database.rs  error.rs  ffmpeg.rs  lib.rs  library.rs  lyrics.rs  main.rs  playlists.rs  profile.rs  scanner.rs  stats.rs  updater.rs  watcher.rs
src-tauri/src/audio/: state.rs
src/components/: lyrics-panel.tsx  main-content.tsx  mini-player.tsx  music-controller.tsx  navigation-menu.tsx  page-skeleton.tsx  playlist-edit-dialog.tsx  queue-menu.tsx  skeletons.tsx  titlebar.tsx  track-detail-panel.tsx  track-select-dialog.tsx
src/context/: audio-context.tsx
src/hooks/: use-app-init.ts  use-scroll-mask.ts
src/lib/: api.ts  audio.ts  cache.ts  color-utils.ts  database.ts  error.ts  logger.ts  queue.ts  scanner.ts  settings.ts  storage.ts  utils.ts
src/pages/: album-detail-page.tsx  albums-page.tsx  artist-detail-page.tsx  artists-page.tsx  home-page.tsx  insights-page.tsx  playlist-detail-page.tsx  playlists-page.tsx  profile-selection-page.tsx  settings-page.tsx  songs-page.tsx
src/stores/: audio-store.ts  library-store.ts  (+6 more)
(+68 files in other folders)
