[package]
name = "vibemusic"
version = "0.0.2"
description = "A modern, cross-platform desktop music player built with Tauri, React, and TypeScript."
authors = ["justCallMeJeg", "ItsMikhaeli"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vibemusic_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tauri-plugin-sql = { version = "2.3.1", features = ["sqlite"] }
tauri-plugin-store = "2.4.2"
lofty = "0.22.4"
walkdir = "2.5.0"
tauri-plugin-dialog = "2.5.0"
tauri-plugin-fs = "2.4.5"
tauri-plugin-log = "2"
cpal = "0.15"
ringbuf = "0.4"
souvlaki = "0.7"
raw-window-handle = "0.6"
thiserror = "2.0.17"
rayon = "1.10"
rusqlite = { version = "0.32", features = ["bundled"] }
image = "0.24"
sha2 = "0.10"
base64 = "0.21"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
url = "2.5"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

